release: v0.4.1 — SLF4J SqlLogger adapter, upsert/union hardening
Added:
- LightQueryLoggers.slf4j(...) adapter (optional slf4j-api, zero runtime
  impact), T28 coverage

Fixed:
- H2 upsert: render native MERGE..KEY (H2 2.x rejects ON CONFLICT..DO UPDATE
  and ON DUPLICATE KEY UPDATE in regular mode — probed)
- identity PK with non-null value joins the upsert column list so the
  conflict path can fire; null-PK upsert degenerates to plain insert
- upsert triggers FillListener (onInsert+onUpdate; insert-only when null PK)
- DataAccessException no longer masks real SQL errors when bind params
  contain nulls (List.copyOf rejected null elements)
- union/unionAll fail fast on partner orderBy/limit/offset/forUpdate and on
  column-count mismatch

Docs: DESIGN 5.17-5.19 contracts + dialect table + T28; USAGE SQL logging,
upsert notes; RELEASE.md patch-release policy; versions -> 0.4.1